tests/functional/lang/eval-fail-undeclared-placeholder-output.err.exp
error:
       … while calling the 'derivationStrict' builtin
         at /pwd/lang/eval-fail-undeclared-placeholder-output.nix:1:1:
            1| builtins.derivationStrict {
             | ^
            2|   name = "test-undeclared-placeholder";

       … while evaluating derivation 'test-undeclared-placeholder'
         whose name attribute is located at /pwd/lang/eval-fail-undeclared-placeholder-output.nix:2:3

       error: derivation 'test-undeclared-placeholder' references its own output 'bar' via placeholder, but this output is not declared (lint-undeclared-placeholder-outputs)
